--- a/src/components/Video/Video.css
+++ b/src/components/Video/Video.css
@@ -7,6 +7,22 @@
     justify-content: "flex-end";
     flex-direction: column;
   }
+  .video-title:hover {
+    
+  cursor: help;
+  position: relative;
+  border: #666 2px dotted;
+  padding: 5px 20px 5px 5px;
+  display: block;
+  z-index: 100;
+  background: #e3e3e3;
+  left: 0px;
+  margin: 15px;
+  width: 300px;
+  
+  top: 15px;
+  text-decoration: none;
+}
   
   .video-title {
     align-self: start;
@@ -18,10 +34,16 @@
     flex-wrap: inherit;
     list-style-position: inherit;
     text-decoration: wavy;
-    font-size: 1.1rem;
-    font-weight: 100;
+    font-size: 1.3rem;
+    font-weight: bolder;
+    font-variant: small-caps;
     size: 0vmax;
-    
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    border-bottom: 1px dashed;
+    font-stretch: wider;
+    color:black;
+    background-color: rgb(20, 220, 187);
+  
 
    
   }
