--- a/src/components/Video/Video.css
+++ b/src/components/Video/Video.css
@@ -11,6 +11,7 @@
 
 }
 .video-thumbnail img {
+  background-color: black;
   
   border: 5px groove rgba(0, 87, 128,90);
   padding: 50px;
@@ -32,15 +33,18 @@
 
   
   .video-title {
+    background-origin: padding-box;
+    background-color: wheat;
+    border-block-start-color: blue;
     
     width: fit-content;
     font-variant-east-asian: full-width;
    	transition: 1s all;
     text-align: center;
-    
+  
     column-gap: normal;
     display: block;
-    border-end-end-radius: initial;
+    border-end-end-radius: 10;
     flex-direction: column;
     flex-wrap: inherit;
     list-style-position: inherit;
@@ -48,12 +52,16 @@
     font-size: 1.3rem;
     font-weight: bolder;
     font-variant: small-caps;
-    size: 0vmax;
+    size: 0vm;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    border-bottom: 1px groove;
-    border: 1px transparent ;
+    border-bottom: yellowgreen;
+    border: firebrick;
     font-stretch: condensed;
     color: rgba(red, green, blue, alpha);
+    border-radius: 15px 50px 30px 5px;
+  
+  
+  
     
   
 
